limit cropper container height & fix t

--- a/src/components/_shared/ImageCropper/ImageCropper.module.scss
+++ b/src/components/_shared/ImageCropper/ImageCropper.module.scss
@@ -1,3 +1,7 @@
+.cropperContainer {
+  max-height: 55vh;
+}
+
 .cropperControls {
   display: flex;
   justify-content: space-between;
